Connected Board Container to store

--- a/src/static/login/login.html
+++ b/src/static/login/login.html
@@ -125,5 +125,6 @@
             />
         </symbol>
     </svg>
+    <script src="../listOfFiles.js"> type="text/javascript"</script>
     <script src="./login.js" type="text/javascript"></script>
 </body>
